--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server-mongodb.js",
-    "start": "node server-mongodb.js",
+    "dev": "node api/index.js",
+    "start": "node api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
