--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "backend",
+  "name": "seatag-backend",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "api/index.js",
   "scripts": {
     "dev": "node api/index.js",
-    "start": "node api/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node api/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -19,7 +14,7 @@
     "mongoose": "^8.19.1",
     "ws": "^8.18.3"
   },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
+  "engines": {
+    "node": ">=20"
   }
 }
