--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,6 @@
     }
   },
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/index.js" }
+    { "src": "/backend/api/(.*)", "dest": "/backend/api/index.js" }
   ]
 }
