--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,13 @@
   "version": 2,
   "functions": {
     "api/index.js": {
-      "runtime": "vercel-node@3.0.0"
+      "runtime": "nodejs20.x"
     }
   },
+  "builds": [
+    { "src": "api/index.js", "use": "@vercel/node" }
+  ],
   "routes": [
-    { "src": "/backend/api/(.*)", "dest": "/backend/api/index.js" }
+    { "src": "/(.*)", "dest": "api/index.js" }
   ]
 }
