--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,13 @@
   "version": 2,
   "functions": {
     "api/index.js": {
-      "runtime": "nodejs20.x"
+      "runtime": "vercel-node@3.0.0"
     }
   },
   "builds": [
-    { "src": "api/index.js", "use": "@vercel/node" }
+    { "src": "backend/api/index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "api/index.js" }
+    { "src": "/(.*)", "dest": "backend/api/index.js" }
   ]
 }
