--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,10 @@ services:
   - type: web
     name: seatag-backend
     env: node
+    rootDir: backend
     buildCommand: npm install
     startCommand: node server.js
     plan: free
     envVars:
       - key: NODE_ENV
         value: production
-      - key: MONGODB_URI
-        sync: false
